fix: update CSS to use 'flex-start' for better alignment

--- a/src/app/ascents/page.module.css
+++ b/src/app/ascents/page.module.css
@@ -5,6 +5,6 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
